--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -135,6 +135,7 @@ section.intro {
 .case-study {
   display: block;
   padding: remPx(20);
+  width: 100%;
 }
 
 .images,
